* Author: Mike FABIAN <mfabian@redhat.com>
* 19 Dec 2018 Released 2.4.0 version
* Update translations from zanata (de, es, fr, ja, pl, uk updated)
* Add new command 'toggle_hide_input' to hide the preëdit, lookup table, and auxiliary text
* Add an option to use preedit style only if lookup is enabled
* Add an option to choose the style of underlining the preedit
* Don’t try to record the first candidate when there is none after an automatic commit on focus out or reset (Resolves: rhbz#1659128)
* Add an option in the setup tool to set the debug level
* Move appearance related options to the new “Appearance” tab
* Add settings for colour and other appearance stuff
* Move “Dictionaries and input methods” Tab in the setup tool to the first position
* Update the shortcut hints in the tooltips when keybindings change
* Only show the label in the panel menus for emoji-mode and off-the-record-mode
* Don’t show the shortcut hints in the menu labels, takes too much space there.
* Update README because of the recent change to make keybindings configurable.

* Author: Mike FABIAN <mfabian@redhat.com>
* 13 Dec 2018 Released 2.3.3 version
* Toggle candidates between 'title', 'upper', and 'lower' case when Shift is typed.
* Improve Spanish translation (Thanks to Ismael Venegas Castelló)

* Author: Mike FABIAN <mfabian@redhat.com>
* 11 Dec 2018 Released 2.3.2 version
* Key bindings should match independent of whether Num Lock or Caps Lock are on or off.

* Author: Mike FABIAN <mfabian@redhat.com>
* 08 Dec 2018 Released 2.3.1 version
* Update translations from zanata (cs, de, es, fr, ja, pl, pt_BR, uk, zh_CN updated)
* Avoid some PyGTKDeprecationWarnings
* Don’t show Unicode 12.0 draft emoji by default in emoji-picker
* Update emoji data to Unicode 12.0 draft
* Update emoji annotations from CLDR

* Author: Mike FABIAN <mfabian@redhat.com>
* 05 Dec 2018 Released 2.3.0 version
* Update translations from zanata (de, ja, uk updated)
* Commit the current preëdit when the focus changes