@@ -19,6 +19,24 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="2.4.1" date="2018-12-27" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Update translations from zanata (pl updated)
+          </li>
+          <li>
+            Add direct input mode (Resolves:
+            https://github.com/mike-fabian/ibus-typing-booster/issues/25)
+          </li>
+          <li>
+            Fix start of setup tool when libexedir is not
+            /usr/libexec/ (Resolves:
+            https://github.com/mike-fabian/ibus-typing-booster/issues/42)
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="2.4.0" date="2018-12-19" urgency="medium">
       <description>
         <ul>
